<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isae_simulations_package</name>
  <version>0.0.0</version>
  <description>isae simulations package</description>
  <maintainer email="p.chauvin@isae-supaero.fr">pascal</maintainer>
  <license>ISAE_2022</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>
  <!--depend>rviz2</depend-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
